[metadata]
name = microdot
version = 1.3.2
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = The impossibly small web framework for MicroPython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/microdot
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/microdot/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
py_modules =
    microdot
    microdot_asyncio
    microdot_utemplate
    microdot_jinja
    microdot_session
    microdot_websocket
    microdot_websocket_alt
    microdot_asyncio_websocket
    microdot_test_client
    microdot_asyncio_test_client
    microdot_wsgi
    microdot_asgi
    microdot_asgi_websocket
